--- a/css/style2.css
+++ b/css/style2.css
@@ -17,12 +17,12 @@ body, html {height: 100%;}
 
 a {text-decoration: none; color: #333; border-bottom: 3px solid #0068FF;}
 a:hover {color: #0068FF}
-p {font-weight: 200; font-size: 20px;}
+p {font-weight: 200; font-size: 25px; color: #0068FF;}
 
-.name {font-family: Montserrat; font-size: 45px; text-transform: uppercase; font-weight: 900; padding: 12px; border: 4px solid #0068FF; color: #0068FF; display: inline-block; position: absolute; margin-bottom: 60px; top: 60px; left: 90px;}
+.name {font-family: Montserrat; font-size: 45px; text-transform: uppercase; font-weight: 900; padding: 12px; border: 4px solid #0068FF; color: #0068FF; background: #000; display: inline-block; position: absolute; margin-bottom: 60px; top: 60px; left: 90px;}
 
 .container {margin: 0 auto; width: 700px; padding: 120px 12px 50px; overflow: auto;}
-article {padding: 60px;}
+article {padding: 60px; background: #000; box-shadow: 10px 10px 2px darkblue;}
 article::before {
   content: '\2601';
   position: relative;
@@ -48,5 +48,5 @@ hr {border-bottom: 3px solid #0068FF;}
 .inline-list li {display: inline-block;}
 
 footer .inline-list li {margin-right: 40px;}
-footer a {border: none; color: #0068FF;}
+footer a {border: none; color: #0068FF; font-size: 14px; font-weight: bold; background: #000; padding: 10px;}
 footer {margin: 0 auto; position: absolute; bottom: 55%; right: -255px; padding: 40px 0 0 0; width: 600px; -webkit-transform: rotate(-90deg);}
